--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "kysely-plugins",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "prepare": "tsc --emitDeclarationOnly",
     "build": "npm run build:auto-updated-at && npm run build:soft-delete",
